# sdlc-automation-github-demo

./: .env.example  .gitignore  AGENTS.md  QA-REPORT-KAN-65.md  QA_REPORT.md  README.md  pyproject.toml  qa-report-pr103.md  qa-report-pr33-kan21.md  qa-report.md  qa-validation-kan-21.py  qa_age_filter_validation.py  qa_edge_cases.py  qa_openspec_verification.py  qa_validation.py  qa_validation_kan65.py  test_runner.py
.github/: pull_request_template.md
agent-canvas/: README.md
app/: Dockerfile  README.md
config/: github-labels.json
docs/: agent-canvas-dark-factory-demo.md  demo-upgrades.md  enterprise-memory-cost-demo.md  github-demo-walkthrough.md  replicated-jira-delegated-factory-demo.md  setup-checklist.md  tested-demo-flow.md  ui-playwright-example.md  work-log.md
fixtures/: github_issue_comment_build.json  github_issue_labeled_incident.json  github_pr_labeled_qa.json
integrations/: README.md
providers/: README.md  runtime-manifest.json
qa-evidence/: api-pets-response.json  home-page.html  qa-validation-report.md
scripts/: README.md  agent_canvas_delegate.py  build_context_reuse_report.py  compare_sidekick_experiment.py  create_github_labels.py  disable_openhands_automations.py  launch_sidekick_v2.py  openhands_v1_delegate.py  petstore_config_fix.py  petstore_gcp_break.py  petstore_gcp_common.py  petstore_gcp_deploy.py  petstore_gcp_observe.py  petstore_sre_setup.py  preflight_github_demo.py  preflight_live_connections.py  register_github_automations.py  register_jira_automations.py  register_replicated_factory_automation.py  simulate_jira_event.py  (+7 more)
(+531 files in other folders)
